k8s/bases/apps/data-product-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-product-controller
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
