k8s/bases/apps/data-product-controller/deployment-ui-kit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-product-controller-ui-kit
  namespace: data-product-controller
  labels:
    app.kubernetes.io/name: data-product-controller
    app.kubernetes.io/instance: data-product-controller
    app.kubernetes.io/component: ui-kit
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: data-product-controller
      app.kubernetes.io/instance: data-product-controller
      app.kubernetes.io/component: ui-kit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: data-product-controller
        app.kubernetes.io/instance: data-product-controller
        app.kubernetes.io/component: ui-kit
    spec:
      serviceAccountName: data-product-controller-ui-kit
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-auth
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: data-product-controller
              app.kubernetes.io/instance: data-product-controller
              app.kubernetes.io/component: ui-kit
      containers:
        - name: ui-kit
          image: ghcr.io/devantler-tech/data-product-controller:1.18.0@sha256:c5c5fdcb0bfc65279231b9a0209ab951544adffd827953035dda9e15c3a5c703
          imagePullPolicy: IfNotPresent
          command:
            - /ui-kit
          args:
            - --http-behind-gateway
            - --listen-address
            - 0.0.0.0:8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            seccompProfile:
              type: RuntimeDefault
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
