k8s/bases/apps/data-product-controller/http-route-ui-kit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-product-controller-ui-kit
  namespace: data-product-controller
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - product-ui.${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - Cookie
              - Authorization
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
      backendRefs:
        - name: data-product-controller-ui-kit
          port: 80
