k8s/bases/apps/data-product-controller/cilium-network-policy-contract-probe.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-data-product-controller-contract-probe
  namespace: data-product-controller
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: data-product-controller
      k8s:app.kubernetes.io/instance: data-product-controller
      k8s:app.kubernetes.io/component: contract-probe
  egress:
    - toFQDNs:
        - matchName: harbour-data.${domain}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: harbour-data.${domain}
